# serializer version: 1
# name: test_count_aggregation[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         coalesce(anon_1.count_1, ?) AS coalesce_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(*) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         coalesce(anon_1.count_1, %s) AS coalesce_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_count_aggregation[session-async-tracked-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.count_1
    FROM color AS color
    JOIN LATERAL (
          SELECT count(*) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.best_time_to_pick) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.best_time_to_pick) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.best_time_to_pick) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-createdAt-created_at-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.created_at) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-createdAt-created_at-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.created_at) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-createdAt-created_at-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.created_at) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-name-name-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-name-name-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.name) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-name-name-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-sweetness-sweetness-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.sweetness) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-sweetness-sweetness-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.sweetness) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-sweetness-sweetness-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.sweetness) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-waterPercent-water_percent-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.water_percent) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-waterPercent-water_percent-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT max(fruit_1.water_percent) AS max_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.max_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_max_aggregation[session-async-tracked-waterPercent-water_percent-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.max_1
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.water_percent) AS max_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.best_time_to_pick) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.best_time_to_pick) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-bestTimeToPick-best_time_to_pick-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.min_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.best_time_to_pick) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-createdAt-created_at-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.created_at) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-createdAt-created_at-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.created_at) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-createdAt-created_at-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.min_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.created_at) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-name-name-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-name-name-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.name) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-name-name-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.min_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-sweetness-sweetness-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.sweetness) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-sweetness-sweetness-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.sweetness) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-sweetness-sweetness-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.min_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.sweetness) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-waterPercent-water_percent-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.water_percent) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-waterPercent-water_percent-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT min(fruit_1.water_percent) AS min_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.min_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_min_aggregation[session-async-tracked-waterPercent-water_percent-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.min_1
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.water_percent) AS min_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-no-pagination-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-no-pagination-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-no-pagination-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-pagination-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-pagination-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-avg-pagination-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         avg(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-no-pagination-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-no-pagination-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-no-pagination-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-pagination-aiosqlite_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-pagination-asyncmy_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-sweetness-sweetness-sum-pagination-psycopg_async_engine]
  '''
  SELECT fruit.sweetness,
         fruit.id,
         sum(fruit.sweetness) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.sweetness AS sweetness
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-no-pagination-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-no-pagination-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-no-pagination-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-pagination-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-pagination-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-avg-pagination-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         avg(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-no-pagination-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-no-pagination-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-no-pagination-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM fruit AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-pagination-aiosqlite_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT ?
          OFFSET ?
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-pagination-asyncmy_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %s,
                 %s
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_root_aggregation[session-async-tracked-waterPercent-water_percent-sum-pagination-psycopg_async_engine]
  '''
  SELECT fruit.water_percent,
         fruit.id,
         sum(fruit.water_percent) OVER () AS anon_1
    FROM (
          SELECT fruit.id AS id,
                 fruit.water_percent AS water_percent
            FROM fruit AS fruit
           ORDER BY fruit.id ASC
           LIMIT %(param_1)s::INTEGER
          OFFSET %(param_2)s::INTEGER
         ) AS fruit
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-sweetness-sweetness-avg-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-sweetness-sweetness-avg-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.sweetness) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-sweetness-sweetness-avg-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-waterPercent-water_percent-avg-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-waterPercent-water_percent-avg-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT avg(fruit_1.water_percent) AS avg_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_statistical_aggregation[session-async-tracked-waterPercent-water_percent-avg-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.avg_1
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-sweetness-sweetness-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-sweetness-sweetness-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-sweetness-sweetness-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-waterPercent-water_percent-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-waterPercent-water_percent-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.water_percent) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    LEFT OUTER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE color.id = %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_sum_aggregation[session-async-tracked-waterPercent-water_percent-psycopg_async_engine]
  '''
  SELECT color.id,
         anon_1.sum_1
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE color.id = %(id_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
